refactor: rename UI branding from Stash TV to Stashgifs across UI and docs

--- a/stashgifs/app/test.html
+++ b/stashgifs/app/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Stash TV Feed - Test</title>
+  <title>Stashgifs Feed - Test</title>
   <style>
     body { background: #000; color: #fff; padding: 2rem; font-family: monospace; }
     .error { color: #f44; }
@@ -10,7 +10,7 @@
   </style>
 </head>
 <body>
-  <h1>Stash TV Feed UI - Test Page</h1>
+  <h1>Stashgifs Feed UI - Test Page</h1>
   <div id="status">Initializing...</div>
   <div id="logs"></div>
   
