--- a/stashgifs/src/feed-index.html
+++ b/stashgifs/src/feed-index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, viewport-fit=cover" />
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="Stash TV">
+    <meta name="apple-mobile-web-app-title" content="Stashgifs">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <meta name="theme-color" content="#202b33" />
     <link rel="manifest" crossorigin="use-credentials" href="manifest.json" />
-    <title>Stash TV | Stash</title>
+    <title>Stashgifs | Stash</title>
     <meta name="color-scheme" content="light dark" />
     <style>html, body { background-color: #000000; margin: 0; padding: 0; }</style>
     <link rel="stylesheet" href="./assets/feed.css">
