Fix autoplay mute/unmute logic and reduce aggressive DOM cleanup
- Fixed global mute setting logic (volume mode vs mute mode)
- All videos now start muted by default
- Videos only unmute when volume mode is enabled (exclusiveAudioEnabled = true)
- Fixed applyExclusiveAudioFocus to not unmute videos during autoplay
- Reduced aggressive DOM cleanup: keep 15-20 posts instead of 5-8
- Increased cleanup distance threshold from 200-400px to 1000-1500px
- Only cleanup when posts exceed 1.5x the limit
- Improved memory management while reducing jarring DOM removals

--- a/stashgifs/app/index.html
+++ b/stashgifs/app/index.html
@@ -35,7 +35,7 @@
     <link rel="preload" href="./assets/feed.css" as="style">
     <link rel="stylesheet" href="./assets/feed.css">
     <!-- Preload critical JavaScript -->
-    <link rel="preload" href="./assets/index.js" as="script">
+    <link rel="preload" href="./assets/index.js" as="script" crossorigin="anonymous">
     <script type="module" src="./assets/index.js"></script>
   </head>
   <body>
