--- a/stashgifs/app/index.html
+++ b/stashgifs/app/index.html
@@ -24,245 +24,31 @@
         --color-accent: #4FA3D1;
       }
       html, body { background-color: var(--color-bg); margin: 0; padding: 0; }
-      /* Enhanced skeleton visibility for header */
-      .header-skeleton-shimmer {
-        background: linear-gradient(
-          90deg,
-          rgba(255, 255, 255, 0.15) 0%,
-          rgba(255, 255, 255, 0.25) 50%,
-          rgba(255, 255, 255, 0.15) 100%
-        );
-        background-size: 200% 100%;
-        animation: shimmer 1.5s ease-in-out infinite;
-        will-change: background-position;
-      }
     </style>
     <!-- Feed UI -->
-    <!-- Preload critical CSS for faster rendering -->
-    <link rel="preload" href="./assets/feed.css" as="style">
     <link rel="stylesheet" href="./assets/feed.css">
-    <!-- Preload critical JavaScript -->
-    <link rel="preload" href="./assets/index.js" as="script" crossorigin="anonymous">
     <script type="module" src="./assets/index.js"></script>
   </head>
   <body>
     <div id="app" class="feed-container">
       <div class="feed-scroll-container">
-        <!-- Header bar skeleton - shown immediately on page load -->
+        <!-- Clean header without skeleton -->
         <div class="feed-header-bar" style="position: sticky; top: 0; width: 100%; max-width: 824px; margin-left: auto; margin-right: auto; height: 56px; z-index: 1001; display: flex; align-items: center; justify-content: flex-start; padding: 8px 12px; box-sizing: border-box; transition: transform 0.24s var(--ease-spring, ease), opacity 0.24s var(--ease-spring, ease); transform: translateY(0);">
           <div style="display: grid; grid-template-columns: auto 1fr; align-items: center; gap: 12px; width: 100%; height: 100%; max-width: 800px; margin-left: 0; margin-right: 0; box-sizing: border-box; flex: 1 1 auto;">
-            <!-- Logo skeleton -->
+            <!-- Logo -->
             <div style="display: inline-flex; align-items: center; height: 36px; padding: 0 12px; border-radius: 6px; border: 1px solid var(--color-separator); background: var(--color-surface-secondary); cursor: pointer; transition: background 0.2s ease, border-color 0.2s ease, opacity 0.2s ease;">
               <div style="font-weight: 700; letter-spacing: 0.6px; color: var(--color-accent); font-size: 14px; line-height: 1.2; text-transform: uppercase; user-select: none; transition: opacity 0.2s ease;">stashgifs</div>
             </div>
-            <!-- Search bar skeleton -->
+            <!-- Search bar -->
             <div style="position: relative; width: 100%; min-width: 0; max-width: 100%; overflow: hidden; box-sizing: border-box; margin-right: 0;">
               <div style="width: 100%; height: 36px; border-radius: 6px; border: 1px solid var(--color-separator); background: var(--color-surface-secondary); position: relative; overflow: hidden;">
-                <div class="header-skeleton-shimmer" style="position: absolute; inset: 0; border-radius: 10px;"></div>
+                <!-- Search input will be added by JavaScript -->
               </div>
             </div>
           </div>
         </div>
         <div class="feed-posts">
-          <!-- Skeleton loaders - shown immediately on page load before JavaScript executes -->
-          <article class="video-post-wrapper video-post-skeleton">
-            <div class="video-post">
-              <div class="video-post__header" style="padding: 8px 16px; margin-bottom: 0;">
-                <div class="chips" style="display: flex; flex-wrap: wrap; gap: 4px; margin: 0;">
-                  <div class="chip-skeleton" style="width: 70px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 85px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 65px; height: 24px; border-radius: 12px;"></div>
-                </div>
-              </div>
-              <div class="video-post__player aspect-16-9" style="position: relative; background-color: var(--color-surface-secondary); overflow: hidden;"></div>
-              <div class="video-post__footer" style="padding: 8px 16px; display: flex; justify-content: flex-end; gap: 4px;">
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-              </div>
-            </div>
-          </article>
-          <article class="video-post-wrapper video-post-skeleton">
-            <div class="video-post">
-              <div class="video-post__header" style="padding: 8px 16px; margin-bottom: 0;">
-                <div class="chips" style="display: flex; flex-wrap: wrap; gap: 4px; margin: 0;">
-                  <div class="chip-skeleton" style="width: 75px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 90px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 80px; height: 24px; border-radius: 12px;"></div>
-                </div>
-              </div>
-              <div class="video-post__player aspect-16-9" style="position: relative; background-color: var(--color-surface-secondary); overflow: hidden;"></div>
-              <div class="video-post__footer" style="padding: 8px 16px; display: flex; justify-content: flex-end; gap: 4px;">
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-              </div>
-            </div>
-          </article>
-          <article class="video-post-wrapper video-post-skeleton">
-            <div class="video-post">
-              <div class="video-post__header" style="padding: 8px 16px; margin-bottom: 0;">
-                <div class="chips" style="display: flex; flex-wrap: wrap; gap: 4px; margin: 0;">
-                  <div class="chip-skeleton" style="width: 68px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 82px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 72px; height: 24px; border-radius: 12px;"></div>
-                </div>
-              </div>
-              <div class="video-post__player aspect-16-9" style="position: relative; background-color: var(--color-surface-secondary); overflow: hidden;"></div>
-              <div class="video-post__footer" style="padding: 8px 16px; display: flex; justify-content: flex-end; gap: 4px;">
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-              </div>
-            </div>
-          </article>
-          <article class="video-post-wrapper video-post-skeleton">
-            <div class="video-post">
-              <div class="video-post__header" style="padding: 8px 16px; margin-bottom: 0;">
-                <div class="chips" style="display: flex; flex-wrap: wrap; gap: 4px; margin: 0;">
-                  <div class="chip-skeleton" style="width: 73px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 88px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 78px; height: 24px; border-radius: 12px;"></div>
-                </div>
-              </div>
-              <div class="video-post__player aspect-16-9" style="position: relative; background-color: var(--color-surface-secondary); overflow: hidden;"></div>
-              <div class="video-post__footer" style="padding: 8px 16px; display: flex; justify-content: flex-end; gap: 4px;">
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-              </div>
-            </div>
-          </article>
-          <article class="video-post-wrapper video-post-skeleton">
-            <div class="video-post">
-              <div class="video-post__header" style="padding: 8px 16px; margin-bottom: 0;">
-                <div class="chips" style="display: flex; flex-wrap: wrap; gap: 4px; margin: 0;">
-                  <div class="chip-skeleton" style="width: 71px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 86px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 76px; height: 24px; border-radius: 12px;"></div>
-                </div>
-              </div>
-              <div class="video-post__player aspect-16-9" style="position: relative; background-color: var(--color-surface-secondary); overflow: hidden;"></div>
-              <div class="video-post__footer" style="padding: 8px 16px; display: flex; justify-content: flex-end; gap: 4px;">
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-              </div>
-            </div>
-          </article>
-          <article class="video-post-wrapper video-post-skeleton">
-            <div class="video-post">
-              <div class="video-post__header" style="padding: 8px 16px; margin-bottom: 0;">
-                <div class="chips" style="display: flex; flex-wrap: wrap; gap: 4px; margin: 0;">
-                  <div class="chip-skeleton" style="width: 69px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 84px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 74px; height: 24px; border-radius: 12px;"></div>
-                </div>
-              </div>
-              <div class="video-post__player aspect-16-9" style="position: relative; background-color: var(--color-surface-secondary); overflow: hidden;"></div>
-              <div class="video-post__footer" style="padding: 8px 16px; display: flex; justify-content: flex-end; gap: 4px;">
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-              </div>
-            </div>
-          </article>
-          <article class="video-post-wrapper video-post-skeleton">
-            <div class="video-post">
-              <div class="video-post__header" style="padding: 8px 16px; margin-bottom: 0;">
-                <div class="chips" style="display: flex; flex-wrap: wrap; gap: 4px; margin: 0;">
-                  <div class="chip-skeleton" style="width: 72px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 87px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 77px; height: 24px; border-radius: 12px;"></div>
-                </div>
-              </div>
-              <div class="video-post__player aspect-16-9" style="position: relative; background-color: var(--color-surface-secondary); overflow: hidden;"></div>
-              <div class="video-post__footer" style="padding: 8px 16px; display: flex; justify-content: flex-end; gap: 4px;">
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-              </div>
-            </div>
-          </article>
-          <article class="video-post-wrapper video-post-skeleton">
-            <div class="video-post">
-              <div class="video-post__header" style="padding: 8px 16px; margin-bottom: 0;">
-                <div class="chips" style="display: flex; flex-wrap: wrap; gap: 4px; margin: 0;">
-                  <div class="chip-skeleton" style="width: 70px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 85px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 75px; height: 24px; border-radius: 12px;"></div>
-                </div>
-              </div>
-              <div class="video-post__player aspect-16-9" style="position: relative; background-color: var(--color-surface-secondary); overflow: hidden;"></div>
-              <div class="video-post__footer" style="padding: 8px 16px; display: flex; justify-content: flex-end; gap: 4px;">
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-              </div>
-            </div>
-          </article>
-          <article class="video-post-wrapper video-post-skeleton">
-            <div class="video-post">
-              <div class="video-post__header" style="padding: 8px 16px; margin-bottom: 0;">
-                <div class="chips" style="display: flex; flex-wrap: wrap; gap: 4px; margin: 0;">
-                  <div class="chip-skeleton" style="width: 74px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 89px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 79px; height: 24px; border-radius: 12px;"></div>
-                </div>
-              </div>
-              <div class="video-post__player aspect-16-9" style="position: relative; background-color: var(--color-surface-secondary); overflow: hidden;"></div>
-              <div class="video-post__footer" style="padding: 8px 16px; display: flex; justify-content: flex-end; gap: 4px;">
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-              </div>
-            </div>
-          </article>
-          <article class="video-post-wrapper video-post-skeleton">
-            <div class="video-post">
-              <div class="video-post__header" style="padding: 8px 16px; margin-bottom: 0;">
-                <div class="chips" style="display: flex; flex-wrap: wrap; gap: 4px; margin: 0;">
-                  <div class="chip-skeleton" style="width: 67px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 83px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 73px; height: 24px; border-radius: 12px;"></div>
-                </div>
-              </div>
-              <div class="video-post__player aspect-16-9" style="position: relative; background-color: var(--color-surface-secondary); overflow: hidden;"></div>
-              <div class="video-post__footer" style="padding: 8px 16px; display: flex; justify-content: flex-end; gap: 4px;">
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-              </div>
-            </div>
-          </article>
-          <article class="video-post-wrapper video-post-skeleton">
-            <div class="video-post">
-              <div class="video-post__header" style="padding: 8px 16px; margin-bottom: 0;">
-                <div class="chips" style="display: flex; flex-wrap: wrap; gap: 4px; margin: 0;">
-                  <div class="chip-skeleton" style="width: 76px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 91px; height: 24px; border-radius: 12px;"></div>
-                  <div class="chip-skeleton" style="width: 81px; height: 24px; border-radius: 12px;"></div>
-                </div>
-              </div>
-              <div class="video-post__player aspect-16-9" style="position: relative; background-color: var(--color-surface-secondary); overflow: hidden;"></div>
-              <div class="video-post__footer" style="padding: 8px 16px; display: flex; justify-content: flex-end; gap: 4px;">
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-                <div class="button-skeleton" style="width: 44px; height: 44px; border-radius: 8px;"></div>
-              </div>
-            </div>
-          </article>
+          <!-- Content will be loaded by JavaScript -->
         </div>
       </div>
     </div>
